@@ -398,7 +398,7 @@ Instances have the following attributes:
    +-------+--------------------------+
    | Index | Value                    |
    +=======+==========================+
-   | ``0`` | Year                     |
+   | ``0`` | Year (>= 1980)           |
    +-------+--------------------------+
    | ``1`` | Month (one-based)        |
    +-------+--------------------------+
@@ -410,6 +410,10 @@ Instances have the following attributes:
    +-------+--------------------------+
    | ``5`` | Seconds (zero-based)     |
    +-------+--------------------------+
+
+   .. note::
+
+      The ZIP file format does not support timestamps before 1980.
 
 
 .. attribute:: ZipInfo.compress_type
